<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL" Id="{06b67413-167b-495d-b4a8-599765ad6913}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	bDin1 AT%I* : BOOL;
	bDin2 AT%I* : BOOL;
	bDin3 AT%I* : BOOL;
	bDin4 AT%I* : BOOL;
	bDin5 AT%I* : BOOL;
	bDin6 AT%I* : BOOL;
	bDin7 AT%I* : BOOL;
	bDin8 AT%I* : BOOL;
	
	gDin1 AT%I* : BOOL;
	gDin2 AT%I* : BOOL;
	gDin3 AT%I* : BOOL;
	gDin4 AT%I* : BOOL;
	gDin5 AT%I* : BOOL;
	gDin6 AT%I* : BOOL;
	gDin7 AT%I* : BOOL;
	gDin8 AT%I* : BOOL;
	
	bDout1 AT%Q* : BOOL;
	bDout2 AT%Q* : BOOL;
	bDout3 AT%Q* : BOOL;
	bDout4 AT%Q* : BOOL;
	bDout5 AT%Q* : BOOL;
	bDout6 AT%Q* : BOOL;
	bDout7 AT%Q* : BOOL;
	bDout8 AT%Q* : BOOL;
	
	gDout1 AT%Q* : BOOL;
	gDout2 AT%Q* : BOOL;
	gDout3 AT%Q* : BOOL;
	gDout4 AT%Q* : BOOL;
	gDout5 AT%Q* : BOOL;
	gDout6 AT%Q* : BOOL;
	gDout7 AT%Q* : BOOL;
	gDout8 AT%Q* : BOOL;
	
	nStepperState AT%I* : BYTE;
	nStepperPosition AT%I*: UINT;
	nStepperExtPosition AT%I* : WORD;
	
	nStepperCtrl AT%Q* : BYTE;
	nStepperVelocity AT%Q* : INT;
	nStepperExtCtrl AT%Q* : WORD;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>